packages/next-swc/crates/core/tests/errors/server-actions/8/input.js
const foo = async () => {
  'use strict'
  'use server'
}

const bar = async () => {
  const x = 1
  ;('use server')
}
